[tool.poetry]
name = "python-deepdive"
version = "0.1.0"
description = "Learning materials for Advanced python course"
authors = ["Giedrius Blazys <888236+blazysecon@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "python_deepdive"}]

[tool.poetry.dependencies]
python = "^3.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^22.3.0"
Sphinx = "^4.5.0"
furo = "^2022.4.7"
ipykernel = "^6.13.0"
behave = "^1.2.6"
termcolor = "^1.1.0"
isort = "^5.10.1"
notebook = "^6.4.12"
pre-commit = "^2.19.0"
mypy = "^0.961"
flake8 = "^5.0.1"
chispa = "^0.9.2"
sphinx-autoapi = "^1.8.4"
myst-parser = "^0.18.0"
mistune = "^2.0.3"
flake8-pyproject = "^1.2.2"

[[tool.poetry.source]]
name = "vintools[impala,spark,jupyter]"  # This name will be used in the configuration to retreive the proper credentials
url = "https://nexus.vinted.net/repository/pypi-all-repos-group/simple"  # URL used to download your packages from

[tool.flake8]
exclude = ['.git', '__pycache__', '.venv']
max_line_length = 99
max_doc_length = 99
max-complexity = 18

[tool.black]
line-length = 99
include = '/project$|\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.eggs
  | \.mypy_cache
  | \.tox
  | \.venv
  | \.vscode
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
skip = ["conftest.py"]

[tool.mypy]
files = "expmetrics/**/*.py,features/**/*.py"
warn_unused_configs = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_unused_ignores = true
warn_no_return = true
warn_return_any = true
warn_redundant_casts = true
strict_equality = true

[[tool.mypy.overrides]]
# Put dependencie's name here if mypy fails to import stubs
module = [
    "scipy.*",
    "statsmodels.*",
    "impala_shell.*",
    "impala.*",
    "chispa.*",
    "vintools.*",
    "pyspark.*",
    "pypika.*",
    "behave.*",
    "termcolor.*",
    "mockito.*",
    "aiodecorators.*",
]
ignore_missing_imports = true
